--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,22 @@ button:focus {
   outline: 1px solid var(--color-accent);
 }
 
+/* Common */
+.section {
+  padding: 4rem;
+  text-align: center;
+}
+
+.section__title {
+  font-size: 2.5rem;
+  margin: 1rem 0;
+}
+
+.section__description {
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+}
+
 /* Header */
 .header {
   background-color: var(--color-primary);
