--- a/css/style.css
+++ b/css/style.css
@@ -288,3 +288,55 @@ button:focus {
   font-size: 1.2rem;
   margin-bottom: 0.5rem;
 }
+
+.web-dev__projects__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  gap: 1rem;
+}
+
+.web-dev__projects__item {
+  position: relative;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.web-dev__project__image {
+  width: 100%;
+  aspect-ratio: 3 / 2;
+  object-fit: cover;
+}
+
+.web-dev__project__metadata {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-black);
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(-1rem);
+  transition: all 200ms ease-in;
+}
+
+.web-dev__project__metadata:hover {
+  opacity: 0.8;
+  transform: translateY(0);
+}
+
+.web-dev__project__title {
+  font-weight: bold;
+}
+
+.web-dev__project__title:after {
+  content: '';
+  display: block;
+  margin: 0.5rem auto;
+  background-color: var(--color-accent);
+  width: 50px;
+  height: 2px;
+}
