--- a/css/style.css
+++ b/css/style.css
@@ -399,3 +399,71 @@ button:focus {
 .category--selected .category__count {
   opacity: 1;
 }
+
+.calligraphy__projects__list {
+  display: flex;
+  gap: 1rem;
+  overflow-x: auto;
+  overflow-y: hidden;
+  background-color: var(--color-primary-variant);
+  border-radius: 4px;
+  margin: 2rem 0;
+  padding: 1rem;
+}
+
+.calligraphy__projects__list::-webkit-scrollbar {
+  background-color: var(--color-white);
+  height: 8px;
+  border-radius: 2px;
+}
+
+.calligraphy__projects__list::-webkit-scrollbar-thumb {
+  background-color: var(--color-accent);
+  border-radius: 4px;
+}
+
+.calligraphy__projects__item {
+  position: relative;
+  border-radius: 4px;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+
+.calligraphy__project__image {
+  max-height: 300px;
+  object-fit: cover;
+}
+
+.calligraphy__project__metadata {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-black);
+  opacity: 0;
+  color: var(--color-text);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(-1rem);
+  transition: all 200ms ease-in;
+}
+
+.calligraphy__project__metadata:hover {
+  opacity: 0.8;
+  transform: translateY(0);
+}
+
+.calligraphy__project__title {
+  font-weight: bold;
+}
+
+.calligraphy__project__title:after {
+  content: '';
+  display: block;
+  margin: 0.5rem auto;
+  background-color: var(--color-accent);
+  width: 50px;
+  height: 2px;
+}
