--- a/css/style.css
+++ b/css/style.css
@@ -514,3 +514,107 @@ button:focus {
 .contact__link:hover {
   color: var(--color-accent);
 }
+
+@media screen and (max-width: 768px) {
+  /* Common */
+  .section {
+    padding: 4rem 2rem;
+  }
+
+  .section__title {
+    font-size: 2rem;
+  }
+
+  .section__description {
+    font-size: 1rem;
+  }
+
+  /* Header */
+  .header {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .header__nav {
+    width: 100%;
+  }
+
+  .header__menu {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    gap: 1.5rem;
+  }
+
+  /* Home */
+  #home {
+    padding-bottom: 3rem;
+  }
+
+  .home__title {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .home__description {
+    font-size: 1rem;
+  }
+
+  /* About */
+  .work {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .work__item {
+    width: 100%;
+    max-width: 23rem;
+    padding-top: 1rem;
+  }
+
+  .education__item {
+    justify-content: center;
+  }
+
+  /* Web Developement */
+  .web-dev__grid {
+    grid-template-columns: 1fr;
+  }
+
+  .web-dev__projects {
+    grid-column: auto;
+    width: 100%;
+  }
+
+  .coding-skills__item {
+    width: 50%;
+  }
+
+  .web-dev__projects__list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  /* Calligraphy */
+  .categories__list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .category {
+    min-width: 12rem;
+  }
+
+  .calligraphy__project__image {
+    max-height: 200px;
+  }
+
+  /* Arrow Up */
+  .arrow-up {
+    bottom: 1rem;
+    right: 1rem;
+    width: 3rem;
+    height: 3rem;
+    font-size: 2rem;
+    opacity: 0.5;
+  }
+}
