--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ button:focus {
 
 /* Header */
 .header {
-  background-color: var(--color-primary);
+  background-color: transparent;
   position: fixed;
   top: 0;
   width: 100%;
@@ -93,6 +93,12 @@ button:focus {
   align-items: center;
   padding: 1rem;
   z-index: 1;
+  transition: background-color 200ms ease;
+}
+
+.header--primary {
+  background-color: var(--color-primary);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 8px;
 }
 
 .header__logo {
