--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@
   --color-accent-variant: var(--color-orange);
   --color-text: var(--color-white);
 
+  /* Background */
+  --home-background-gradient: linear-gradient(
+    180deg,
+    rgba(5, 10, 19, 1) 0%,
+    rgba(27, 30, 38, 0.8) 100%
+  );
+
   /* Colors */
   --color-white: #ffffff;
   --color-black: #050a13;
@@ -150,6 +157,7 @@ button:focus {
 #home {
   position: relative;
   background-color: var(--color-primary);
+  background: var(--home-background-gradient);
   color: var(--color-text);
   padding: 5rem 1rem;
   padding-top: 7rem;
