--- a/css/style.css
+++ b/css/style.css
@@ -535,6 +535,7 @@ button:focus {
   font-size: 3rem;
   opacity: 0;
   transition: opacity 300ms ease-in-out;
+  z-index: 1;
 }
 
 .arrow-up--visible {
